--- a/.env
+++ b/.env
@@ -1,4 +1,23 @@
-#THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/main/obsidian.css
-#THEME=https://github.com/kepano/obsidian-minimal/blob/master/obsidian.css
-#BASE_THEME=light
+THEME=https://raw.githubusercontent.com/zcysxy/Obsidian-Terminal-Theme/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=Rustbane
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS="body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=true
+dgShowInlineTitle=false
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=false
