--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=true
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=false
