--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-THEME=https://raw.githubusercontent.com/deathau/80s-Neon-for-Obsidian.md/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/G2Jose/synthwave-84-obsidian-theme/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Rustbane
 SITE_BASE_URL=
