--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-THEME=https://raw.githubusercontent.com/manassadasivuni/obsidian-molecule/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/jonsnow231/Minimal-Resources/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Rustbane
 SITE_BASE_URL=
@@ -13,7 +13,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS="body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=false
