--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/jonsnow231/Minimal-Resources/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Rustbane
-SITE_BASE_URL=
+SITE_BASE_URL=https://rustbane.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
